[package]
name = "davisjr"
version = "0.4.3"
edition = "2021"
description = "davisjr is a HTTP framework designed around simplicity and ease-of-use"
authors = ["Erik Hollensbe <erik+github@hollensbe.org>"]
license = "BSD-3-Clause"
homepage = "https://github.com/erikh/davisjr"
repository = "https://github.com/erikh/davisjr"

[dependencies]
hyper = { version = "^0.14", features = [ "http1", "http2", "server", "runtime", "tcp", "stream" ] }
http = "^0.2"
async-recursion = "^1"
tokio = { version = "^1", features = [ "full" ] }
tokio-rustls = { version = "^0.23", optional = true }
webpki = { version = "^0.22", optional = true }
log = { version = "^0.4", optional = true }
tracing = { version = "0.1", optional = true }
lazy_static = "^1"
serde_json = "^1"
anyhow = "^1"

[dev-dependencies]
log = "^0.4"
env_logger = "^0.10"
tracing-subscriber = "^0.3"

[features]
default = ["trace"]
logging = ["log"]
tls = ["tokio-rustls", "webpki"]
trace = ["tracing"]
unix = []
